chore: corrected the border bottom, header alignment, pagination mismatch and loading error.

--- a/src/less/cell.less
+++ b/src/less/cell.less
@@ -38,3 +38,7 @@
         background-color: var(--bt-checkbox-hover-bg);
     }
 }
+
+.bright-table-cell {
+    border-bottom: 1px solid var(--bt-border-color);
+}
