--- a/src/less/pagination.less
+++ b/src/less/pagination.less
@@ -125,7 +125,8 @@
                 color: var(--bt-button-hover-color);
             }
 
-            &-unknown {
+            &-disabled,
+            &-disabled:hover {
                 background: transparent;
                 color: var(--bt-button-color);
             }
@@ -139,7 +140,6 @@
                 background: var(--bt-button-active-hover-bg);
                 color: var(--bt-button-active-hover-color);
             }
-
         }
     }
 }
