--- a/src/less/row.less
+++ b/src/less/row.less
@@ -5,6 +5,7 @@
         .bright-table-cell-group {
             background: var(--bt-header-row-bg);
             color: var(--bt-header-row-color);
+            font-weight: normal !important;
         }
     }
 
@@ -15,9 +16,6 @@
         .bright-table-cell-group {
             background: var(--bt-normal-row-bg);
         }
-
-        &-striped {}
-
 
         &:hover {
 
